@@ -268,15 +268,14 @@ static int _sub_search(struct _mosquitto_db *db, struct _mosquitto_subhier *subh
 	/* FIXME - need to take into account source_id if the client is a bridge */
 	struct _mosquitto_subhier *branch;
 	int flag = 0;
-	int rc;
 
 	branch = subhier->children;
 	while(branch){
 		if(tokens && tokens->topic && (!strcmp(branch->topic, tokens->topic) || !strcmp(branch->topic, "+"))){
 			/* The topic matches this subscription.
 			 * Doesn't include # wildcards */
-			rc = _sub_search(db, branch, tokens->next, source_id, topic, qos, retain, stored);
-			if(rc == -1 || !tokens->next){
+			_sub_search(db, branch, tokens->next, source_id, topic, qos, retain, stored);
+			if(!tokens->next){
 				_subs_process(db, branch, source_id, topic, qos, retain, stored);
 			}
 		}else if(!strcmp(branch->topic, "#") && !branch->children && (!tokens || strcmp(tokens->topic, "/"))){
